<resources>
    <string name="app_name">Mi Tiempo</string>

    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
</resources>
